[package]
name = "key-recovery"
version = "0.0.1"
edition = "2021"

[dependencies]
bip32 = { version = "0.4.0", features = ["bip39"] }
bip0039 = "0.10.1"
ed25519-dalek = {version = "1.0.1", default-features = false, features = ["rand", "u64_backend"]}
hex = "0.4.3"
namada_sdk = { git = "https://github.com/anoma/namada", rev="e74fdc71aa2ea6f192c0151f492fb770e1c0cfcb", default-features = false }
orion = "0.16.0"
thiserror = "1.0.30"
zeroize = "1.8.1"
toml = "0.8.20"
serde = "1.0.217"
rpassword = "7.3.1"

